[gd_scene load_steps=33 format=3 uid="uid://3kqxe67swqec"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_1md1s"]
[ext_resource type="Script" path="res://Scripts/camera_movement.gd" id="2_dvh2t"]
[ext_resource type="Texture2D" uid="uid://vm5v7memeeej" path="res://assets/OtherSprites/Pink.png" id="3_5d73i"]
[ext_resource type="Shader" path="res://shaders/scroll.gdshader" id="3_w0qj5"]
[ext_resource type="AudioStream" uid="uid://b52aprqqe7h2r" path="res://assets/sounds/tap.wav" id="4_ubdrv"]
[ext_resource type="Texture2D" uid="uid://cfekmo3uqwtng" path="res://assets/PineForestParallax/MorningLayer2.png" id="5_5ubdx"]
[ext_resource type="FontFile" uid="uid://b5q27on0ikd0e" path="res://assets/OtherSprites/Jersey10-Regular.ttf" id="5_qhanw"]
[ext_resource type="AudioStream" uid="uid://cxewllpgyr6c0" path="res://assets/sounds/main_menu.mp3" id="5_yd101"]
[ext_resource type="Texture2D" uid="uid://baw5tjki5scus" path="res://assets/PineForestParallax/MorningLayer1.png" id="6_frn6f"]
[ext_resource type="TileSet" uid="uid://olai71bktxcp" path="res://scenes/levels/tile_map.tres" id="7_7cu5i"]
[ext_resource type="Theme" uid="uid://cx6d1dsn20yf6" path="res://assets/OtherSprites/main_menu.tres" id="7_v1ut2"]
[ext_resource type="Theme" uid="uid://b4ncgrxdxg2j1" path="res://assets/OtherSprites/menu_box.tres" id="8_47h8b"]
[ext_resource type="Texture2D" uid="uid://c52so222ka0yj" path="res://assets/MainCharacter/sprites/Idle (32x32).png" id="8_gut1k"]
[ext_resource type="PackedScene" uid="uid://tsl01q3acwmc" path="res://scenes/mushroom_enemy.tscn" id="9_wy3pa"]
[ext_resource type="Texture2D" uid="uid://dh21o4nlduyio" path="res://assets/OtherSprites/GUI.png" id="13_arhh8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ifu7e"]
shader = ExtResource("3_w0qj5")
shader_parameter/x_axis_modifier = -1.0
shader_parameter/y_axis_modifier = -0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hm8cw"]
shader = ExtResource("3_w0qj5")
shader_parameter/x_axis_modifier = 0.01
shader_parameter/y_axis_modifier = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t5am4"]
shader = ExtResource("3_w0qj5")
shader_parameter/x_axis_modifier = 0.005
shader_parameter/y_axis_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_u17bg"]
atlas = ExtResource("8_gut1k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr2a3"]
atlas = ExtResource("8_gut1k")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvf7u"]
atlas = ExtResource("8_gut1k")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63qqt"]
atlas = ExtResource("8_gut1k")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbu7t"]
atlas = ExtResource("8_gut1k")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn8s8"]
atlas = ExtResource("8_gut1k")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asjni"]
atlas = ExtResource("8_gut1k")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkprx"]
atlas = ExtResource("8_gut1k")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8v0b"]
atlas = ExtResource("8_gut1k")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uftl2"]
atlas = ExtResource("8_gut1k")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eunt1"]
atlas = ExtResource("8_gut1k")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cdla1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u17bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr2a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvf7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63qqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbu7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn8s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asjni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkprx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8v0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uftl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eunt1")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3lbxg"]
bg_color = Color(0.776471, 0.513726, 0.588235, 0.360784)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8nrut"]
draw_center = false

[node name="MainMenuScreen" type="Node"]
script = ExtResource("1_1md1s")

[node name="camera_movement" type="Node2D" parent="."]
script = ExtResource("2_dvh2t")
noise_shake_speed = 0.0
noise_shake_strength = 0.0
shake_decay_rate = 0.0

[node name="Camera" type="Camera2D" parent="camera_movement"]
position = Vector2(576, 321)
position_smoothing_enabled = true

[node name="Node" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="Node"]
modulate = Color(1, 0.611765, 1, 0.403922)
texture_filter = 1
material = SubResource("ShaderMaterial_ifu7e")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -29.0
offset_right = 55.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5d73i")
stretch_mode = 1

[node name="ForestBg" type="TextureRect" parent="Node"]
modulate = Color(1, 0.376471, 1, 1)
texture_filter = 1
material = SubResource("ShaderMaterial_hm8cw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = 92.0
offset_right = 1955.0
offset_bottom = 1244.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_5ubdx")
stretch_mode = 1

[node name="ForestBg2" type="TextureRect" parent="Node"]
modulate = Color(1, 0.376471, 1, 1)
texture_filter = 1
material = SubResource("ShaderMaterial_t5am4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.0
offset_top = 170.0
offset_right = 2010.0
offset_bottom = 1322.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_frn6f")
stretch_mode = 1

[node name="TapSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ubdrv")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yd101")
volume_db = -18.236
autoplay = true

[node name="Menu" type="Node2D" parent="."]

[node name="MenuBox" type="Panel" parent="Menu"]
offset_left = 421.0
offset_top = 263.0
offset_right = 637.0
offset_bottom = 567.0
theme = ExtResource("8_47h8b")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MenuBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -108.0
offset_right = 70.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="Menu/MenuBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_v1ut2")
theme_override_font_sizes/font_size = 25
text = "Play
"

[node name="Options" type="Button" parent="Menu/MenuBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("8_47h8b")
theme_override_font_sizes/font_size = 25
text = "Options"
flat = true

[node name="Credits" type="Button" parent="Menu/MenuBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("8_47h8b")
theme_override_font_sizes/font_size = 25
text = "Credits
"
flat = true

[node name="Quit" type="Button" parent="Menu/MenuBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("8_47h8b")
theme_override_font_sizes/font_size = 25
text = "Quit"
flat = true

[node name="level buttons" type="Node" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="level buttons"]
offset_left = 786.0
offset_top = 375.0
offset_right = 926.0
offset_bottom = 557.0

[node name="level1" type="Button" parent="level buttons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.898039, 0.764706, 0.494118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("5_qhanw")
theme_override_font_sizes/font_size = 35
text = "> level 1_1"
flat = true

[node name="level2" type="Button" parent="level buttons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.898039, 0.764706, 0.494118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("5_qhanw")
theme_override_font_sizes/font_size = 35
text = "> level 2"
flat = true

[node name="level3" type="Button" parent="level buttons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.898039, 0.764706, 0.494118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("5_qhanw")
theme_override_font_sizes/font_size = 35
text = "> test level"
flat = true

[node name="bg_elements" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="TileMap" type="TileMap" parent="bg_elements"]
texture_filter = 1
scale = Vector2(2, 2)
tile_set = ExtResource("7_7cu5i")
format = 2
layer_0/tile_data = PackedInt32Array(786462, 393216, 0, 851998, 393216, 1, 917534, 393216, 2, 786463, 458752, 0, 851999, 458752, 1, 917535, 458752, 2, 786464, 524288, 0, 852000, 524288, 1, 917536, 851968, 1, 983072, 851968, 2, 917537, 917504, 1, 983073, 917504, 2, 720919, 786432, 1, 720920, 1114112, 1, 720921, 1179648, 1, 720922, 1179648, 1, 720923, 1179648, 1, 720924, 1179648, 1, 720925, 1245184, 1, 720926, 786432, 1, 524294, 393216, 1, 589830, 393216, 2, 655366, 524288, 1, 720902, 524288, 2, 393223, 458752, 0, 458759, 589824, 0, 524295, 589824, 1, 589831, 458752, 2, 393224, 458752, 0, 458760, 655360, 0, 524296, 655360, 1, 589832, 458752, 2, 393225, 524288, 0, 458761, 524288, 1, 524297, 524288, 1, 589833, 524288, 2, 524293, 393216, 0, 589829, 393216, 1, 655365, 393216, 1, 720901, 393216, 2, 393222, 393216, 0, 458758, 393216, 1, 1114114, 1114112, 9)

[node name="MushroomEnemy" parent="bg_elements" instance=ExtResource("9_wy3pa")]
position = Vector2(915, 324)
isStacionary = true

[node name="character" type="AnimatedSprite2D" parent="bg_elements"]
texture_filter = 1
position = Vector2(268, 160)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_cdla1")
autoplay = "default"

[node name="Footer" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -36.0
offset_right = 55.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3lbxg")

[node name="TitleBox" type="Panel" parent="."]
offset_left = 354.0
offset_top = 48.0
offset_right = 686.0
offset_bottom = 249.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8nrut")

[node name="TitleText" type="Label" parent="TitleBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -91.5
offset_right = 336.0
offset_bottom = 112.5
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 10
theme_override_constants/line_spacing = -15
theme_override_fonts/font = ExtResource("5_qhanw")
theme_override_font_sizes/font_size = 72
text = "noche
en el 
bosque"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Gui" type="Sprite2D" parent="."]
position = Vector2(1022, -219)
texture = ExtResource("13_arhh8")

[node name="Background2" type="Node2D" parent="."]

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="finished" from="MenuMusic" to="." method="_on_menu_music_finished"]
[connection signal="pressed" from="Menu/MenuBox/VBoxContainer/Play" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu/MenuBox/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="level buttons/VBoxContainer/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level buttons/VBoxContainer/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level buttons/VBoxContainer/level3" to="." method="_on_level_3_pressed"]
